# hitems3D-comfyUI

./: README.md  __init__.py  config.json  install.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
api/: utils.py
web/: image_to_3d_linkage.js  load_glb_upload.js
